# cfm64

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.githooks/: pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/cfm64/: __init__.py  constants.py  datasets.py  loader.py  shuffle.py
src/cfm64/ext/: __init__.py  bindings.cpp
src/cfm64/ext/include/cfm64/: cfm64.hpp  feistel.hpp  shuffle.hpp  splitmix64.hpp
tests/: test_datasets.py  test_loader.py  test_shuffle.py
